fix(onboarding-layout-ui): Added input borders and adjusted spacing

--- a/app/components/Onboarding/Alias.scss
+++ b/app/components/Onboarding/Alias.scss
@@ -3,7 +3,9 @@
 .alias {
   background: transparent;
   outline: none;
-  border: 0;
+  border:1px solid #404040;
+  border-radius: 4px;
+  padding: 15px;
   color: $gold;
   -webkit-text-fill-color: $white;
   font-size: 22px;
